--- a/profile.html
+++ b/profile.html
@@ -15,13 +15,19 @@
             Matthew Kuh
         </h1>
         <div id="about">
-            About
+            <a href="#">
+                About
+            </a>
         </div>
         <div id="portfolio">
+            <a href="#">
             Portfolio
+            </a>
         </div>
         <div id="contact">
+            <a href="#">
             Contact
+            </a>
         </div>
 
         </div>
