add in working links in nav to go to about, portfolio, contact

--- a/profile.html
+++ b/profile.html
@@ -15,17 +15,17 @@
             Matthew Kuh
         </h1>
         <div id="about">
-            <a href="#">
+            <a href="about.html">
                 About
             </a>
         </div>
         <div id="portfolio">
-            <a href="#">
+            <a href="portfolio.html">
             Portfolio
             </a>
         </div>
         <div id="contact">
-            <a href="#">
+            <a href="contact.html">
             Contact
             </a>
         </div>
