--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,13 @@
 
         <hr>
 
-        <img src="https://media.gq.com/photos/5caf9c876328030f7944ecc1/3:2/w_4368,h_2912,c_limit/keanu-reeves-gq-cover-may-2019-social.jpg">
+        <img src="https://assets.teenvogue.com/photos/5c66f5aae78cdb389d7a3138/16:9/w_1280,c_limit/hero-spongebob-squarepants.jpg">
+
+        <img src="https://www.lifewire.com/thmb/R83AtLxKyYRbEzaoscsXoM0gO3k=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/spongebob-squarepants-nickelodeon-032916-1276x850-5bfecf8246e0fb0026823b0a.jpg" id="img1">
+
+        <img src="https://i.ytimg.com/vi/feru5p96Anw/maxresdefault.jpg" id="img2">
+
+        <img src="http://images2.fanpop.com/images/photos/2700000/patrick-best-photos-patrick-star-spongebob-2746153-480-541.jpg" id="img3">
 
     </div>
 </body>
