make footer container with relative position to place blue bar and copyright text abosolute to the container

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
         <hr>
 
-        <img src="https://media.gq.com/photos/5caf9c876328030f7944ecc1/3:2/w_4368,h_2912,c_limit/keanu-reeves-gq-cover-may-2019-social.jpg">
+        <img src="https://cdn.vox-cdn.com/thumbor/V4P3Un_kQNLOCW6XXmZ11aw_N70=/0x0:3733x2100/1200x800/filters:focal(2226x388:2822x984)/cdn.vox-cdn.com/uploads/chorus_image/image/63823681/41af1c60a1387e1c7f2e7ac012e5fc468eb38cb334fd86069a97d289aa160e41fb2dd941c5cfb9a2c2059a6b673e0fb3.0.jpg">
 
         <p id="p1">
             Lorem ipsum dolor sit amet, vim autem putant te, sit sumo euripidis ut, tacimates consequuntur ne mel. Iudico dolores assueverit cu ius, decore facete facilisi an nam, ei mea congue sensibus. Lorem ipsum dolor sit amet, vim autem putant te, sit sumo euripidis ut, tacimates consequuntur ne mel. Iudico dolores assueverit cu ius, decore facete facilisi an nam, ei mea congue sensibus. Lorem ipsum dolor sit amet, vim autem putant te, sit sumo euripidis ut, tacimates consequuntur ne mel. Iudico dolores assueverit cu ius, decore facete facilisi an nam, ei mea congue sensibus. 
@@ -63,7 +63,18 @@
 </body>
 
 <footer>
-    Copyright ©
+        <div id="copyright">
+            
+            <div id="bottomline">
+
+            </div>
+
+            <div id="cptext">
+                Copyright©
+            </div>
+
+        </div>
+    
 </footer>
 
 </html>
