create name bar for portfolio images. made absolute divs inside relative bodywrap

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,26 @@
 
         <hr>
 
+        <div id="spongebob">
+            SpongeBob
+        </div>
+
+        <div id="krabs">
+            Mr. Krabs
+        </div>
+
+        <div id="patrick">
+            Patrick
+        </div>
+
+        <div id="squid">
+            Squidward
+        </div>
+
+        <div id="sandy">
+            Sandy
+        </div>
+
         <img src="https://assets.teenvogue.com/photos/5c66f5aae78cdb389d7a3138/16:9/w_1280,c_limit/hero-spongebob-squarepants.jpg">
 
         <img src="https://www.lifewire.com/thmb/R83AtLxKyYRbEzaoscsXoM0gO3k=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/spongebob-squarepants-nickelodeon-032916-1276x850-5bfecf8246e0fb0026823b0a.jpg" id="img1">
