add pics folder

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
         <hr>
 
-        <img src="profilepic.jpg">
+        <img src="pics/profilepic.jpg">
 
         <p id="p1">
             I was born and raised in Hawaii and spent most of my childhood there.  When I was a kid I played a variety of sports and spent a lot of time at the beach.  I also really liked to fish and some of my best memories as a kid was going out on the ocean with my friend in his 10 foot dingy and 2.5hp motor, trolling around the island.  We would never really catch that much but always had a blast and when the fishing wasn't good we would take our surf boards and check out breaks nearby.
